--- a/VRChat/66/1139566.html
+++ b/VRChat/66/1139566.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "aQYzPvoCj6oLHFdu3zI/NrSr4H/WR5FAlnAnGKoMtLY="></script>
+    "cm6B1Gv3IxdJQiffxmqcMFpQQKb1iZS8yjffZcIY2xw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】アルドラ(Aldra)","description":"UnityのHumanoid対応のオリジナル3Dモデルです。\n「あ、い、う、え、お」のリップシンク用シェイプと\n左右で分けた目のシェイプがありますので自分で表情を作ることができます。\n\n\n-以下同梱規約の抜粋-(Extract of Terms of Service)\n\n-免責事項-\n・本データを使用し、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n・条件についての内容は予告なく変更する場合があります。\n\n-利用条件について-\n当モデルデータ及び付属データの利用に関しましては以下のように定めます。\n・本モデルは営利目的の使用が可能です。（ゲーム、動画、画像、配信等）\n・本モデルはR-18、R-18Gでの使用が可能です。\n・本モデルの改変、及び再配布は自由です。\n\n\n\n-内容物について-\n.blendデータ（パーツ結合前、済）\nモデルデータ（fbx）\nテクスチャデータ（UV画像、テクスチャ画像、psd、AO、UV）\nunitypackage\nreadme\n\n- Disclaimer -\n· Please understand that we can not assume the responsibility even if some inconvenience occurs by using this data.\n· Conditions are subject to change without prior notice.\n\n\n- Terms of use -\nRegarding the use of this model data and attached data, it is decided as follows.\n· wordings of any translated versions of this Terms of use, the meaning and wording of the japanese Language version shall prevail.\n· This model can be used for commercial purposes. (Game, movie, image, distribution etc.)\n· This model can be used with R-18, R-18G.","url":"https://booth.pm/ja/items/1139566","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/a85e65d9-8155-4fab-9fb3-6639d6b122df/i/1139566/229215b1-d4c4-47b2-825d-a7894a457599_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aQYzPvoCj6oLHFdu3zI/NrSr4H/WR5FAlnAnGKoMtLY="></script>
+    nonce="cm6B1Gv3IxdJQiffxmqcMFpQQKb1iZS8yjffZcIY2xw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -456,9 +456,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
