--- a/VRChat/24/1134724.html
+++ b/VRChat/24/1134724.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kFqv4SHK/5tKy2lmSsl4vroy0TE6lllxCx8POnJQ+9A="></script>
+    "26BSBygTa91nlw3cKXZ5hDziuCy7nryuvQWC6iZtoLk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"弓","description":"バイオリンに無かった弓を追加しました！！\nポリゴン数約1000です。VRCでの使用を想定しています。\n改変等は自由ですが再配布はNGです。\nよろしくお願いします。","url":"https://booth.pm/ja/items/1134724","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/dfed956f-05d3-47f6-8530-1e2fec37b36e/i/1134724/799ddde5-2b3a-4d70-8f8d-6e3102c1e7a6_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kFqv4SHK/5tKy2lmSsl4vroy0TE6lllxCx8POnJQ+9A="></script>
+    nonce="26BSBygTa91nlw3cKXZ5hDziuCy7nryuvQWC6iZtoLk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -371,9 +371,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
